# my-project

./: .gitignore  README.md  package-lock.json  pyproject.toml  tailwind.config.ts
src/app/: globals.css  layout.tsx
src/app/(public)/: layout.tsx  page.tsx
src/app/(public)/about/: page.tsx
src/app/(public)/contact/: page.tsx
src/app/(public)/expertise/: page.tsx
src/app/(public)/research/: page.tsx
src/app/(public)/speaking/: page.tsx
src/app/admin/: layout.tsx
src/app/admin/add-content/: page.tsx
src/app/admin/articles/: page.tsx
src/app/admin/dashboard/: page.tsx
src/app/admin/login/: page.tsx
src/app/admin/settings/: page.tsx
src/app/admin/videos/: page.tsx
src/app/api/contact/: route.ts
src/citation_tool/: __init__.py  analyzer.py  cli.py  models.py
src/components/article/: ArticleCard.tsx  ArticleGrid.tsx  ArticleHeader.tsx  RelatedArticles.tsx  ShareButtons.tsx  SummaryBullets.tsx  index.ts
src/components/audio/: AudioPlayer.tsx
src/components/forms/: ContactForm.tsx  NewsletterSignup.tsx  index.ts
src/components/home/: ExpertiseGrid.tsx  FeaturedWork.tsx  HeroSection.tsx  StatisticsBar.tsx  index.ts
src/components/layout/: Container.tsx  Footer.tsx  Header.tsx
src/components/search/: FilterChip.tsx  FilterSidebar.tsx  SearchBar.tsx  index.ts
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Spinner.tsx  index.ts
src/components/video/: VideoCard.tsx  VideoGrid.tsx  YouTubeEmbed.tsx  index.ts
src/lib/: types.ts
src/lib/content-ingestion/: index.ts  pipeline.ts
tests/: test_analyzer.py
(+13 files in other folders)
